# forgejo

./: .air.toml  .deadcode-out  .drone.yml  .editorconfig  .eslintrc.yaml  .gitignore  .gitmodules  .golangci.yml  .release-notes-assistant.yaml  .stylelintrc.yaml  CODEOWNERS  CONTRIBUTING.md  Dockerfile  Dockerfile.ci  Dockerfile.rootless  Makefile  NOTES  NOTHING  README.md  RELEASE-NOTES.md  RELEASE.md  WORKFLOW.md  eslint.config.mjs  go.mod  go.sum  main.go  package-lock.json  package.json  playwright.config.js  playwright.config.ts  pyproject.toml  release-notes-assistant.sh  renovate.json  tailwind.config.js  tsconfig.json  vitest.config.js  webpack.config.js
.devcontainer/: devcontainer.json
.forgejo/: cascading-pr-end-to-end  cascading-release-end-to-end  lint-pr.sh  pull_request_template.md
.woodpecker/: compliance-and-tests.yml  compliance.yml  docker-linux-amd64-release-version.yml  docker-release-version.yml  forgejo-branding.yml  release-version.yml  releases-helper.yml  testing-amd64.yml
CONTRIBUTING/: COC.md  DCO.md  DCO.txt  DISCUSSIONS.md  FUNDING.md  GOVERNANCE.md  RELEASE.md  SECRETS.md  SECURITY.md  SUSTAINABILITY.md  WORKFLOW.md
assets/: go-licenses.json
cmd/: actions.go  admin.go  admin_auth.go  doctor.go  doctor_test.go  dump.go  f3.go  hook.go  hook_test.go  keys.go  main.go  main_test.go  migrate.go  migrate_storage_test.go  serv.go  web.go  web_https.go
contrib/: upgrade.sh
docker/: archmap.txt  map-binaries.sh
integrations/: api_releases_test.go  api_repo_file_create_test.go  api_repo_file_update_test.go  benchmarks_test.go  (+2 more)
(+1947 files in other folders)
