[tool.poetry]
name = "forgejo"
version = "0.0.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
djlint = "1.34.1"
yamllint = "1.35.1"

[tool.djlint]
profile="golang"
ignore="H005,H006,H013,H016,H020,H021,H030,H031"

[tool.codespell]
skip = '.git,*.pdf,*.svg,package-lock.json,go.mod,locale,license,*.git,objects,*.fr-fr.*,*.de-de.*,*.css,go.sum,*.key,gitignore,pyproject.toml,diff_test.go,go-licenses.json'
# precise hits for CamelCased words,various other curious cases which require regex to ignore
# entire line or some portion of it
ignore-regex = '(\b(mx claus|commitT|ReadBy|#afile|respOne|commitI|[cC]rossReference)\b|shouldbe\.|women’s.*womens|"emoji":.*|,bu,|assert\.Equal.*"fo\b|github\.com/unknwon|Copyright 2014 Unknwon|allowed\.noone|[hH]eadErr|atLeast|{"\\U.*)'
#|.*(Maskenpflicht|Geimpft),.*)'
# te - TreeEntry variable
# commiter - wrong spelling but seems used in API
# ALLWAYS - is a config var
# infact - other variable(s)
ignore-words-list = 'crate,te,commiter,befores,allways,infact'
